Fix scrollbar

--- a/style/main.scss
+++ b/style/main.scss
@@ -7,7 +7,7 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
